[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-urifix"
version = "0.1.0"
description = "URI repair connector for diagnosing and fixing urirun ecosystem failures"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-urifix = "urirun_connector_urifix.core:main"

[project.entry-points."urirun.bindings"]
urifix = "urirun_connector_urifix.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_urifix*"]

[tool.setuptools.package-data]
urirun_connector_urifix = ["connector.manifest.json"]
